D3 graphs re-size correctly on small screens

--- a/client/src/css/Telesession.css
+++ b/client/src/css/Telesession.css
@@ -25,6 +25,10 @@
   @media (--gt-md) {
     margin-right: 10px;
   }
+
+  @media (--lt-lg) {
+    margin-bottom: 10px;
+  }
 }
 
 .create-session-button {
@@ -35,7 +39,5 @@
 }
 
 .RepsChartPanel {
-  @media (--gt-md) {
-    margin-bottom: 10px;
-  }
+  margin-bottom: 10px;
 }
