--- a/client/src/css/base.css
+++ b/client/src/css/base.css
@@ -5,6 +5,7 @@ body {
 }
 
 .page {
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
